<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5FBFD"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_essalud_foreground" />

    <TextView
        android:id="@+id/idEssaludd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/sv_essalud"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idMiconsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sv_miconsulta"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/idEssaludd"
        app:layout_constraintTop_toBottomOf="@+id/idEssaludd" />

    <TextView
        android:id="@+id/idBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/idBienvenido"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/idDociden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Documento de identidad"
        android:inputType="text"
        android:text="@string/sv_dociden"
        app:layout_constraintEnd_toEndOf="@+id/idBienvenido"
        app:layout_constraintStart_toStartOf="@+id/idBienvenido"
        app:layout_constraintTop_toBottomOf="@+id/idBienvenido" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/baseline_remove_red_eye_24"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:text="@string/sv_password"
        app:layout_constraintEnd_toEndOf="@+id/idDociden"
        app:layout_constraintStart_toStartOf="@+id/idDociden"
        app:layout_constraintTop_toBottomOf="@+id/idDociden" />


    <Button
        android:id="@+id/ButtonCrear"
        android:layout_width="218dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#499FA6"
        android:backgroundTintMode="src_over"
        android:drawableLeft="@drawable/baseline_person_add_alt_24"
        android:hapticFeedbackEnabled="false"
        android:text="@string/sv_botoncrear"
        android:textColorLink="#41A433"
        app:layout_constraintEnd_toEndOf="@+id/textViewPt2"
        app:layout_constraintStart_toStartOf="@+id/textViewPt2"
        app:layout_constraintTop_toBottomOf="@+id/textViewPt2" />

    <TextView
        android:id="@+id/textViewPt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sv_essaludmiconsulta"
        app:layout_constraintEnd_toEndOf="@+id/textViewPt1"
        app:layout_constraintStart_toStartOf="@+id/textViewPt1"
        app:layout_constraintTop_toBottomOf="@+id/textViewPt1" />

    <TextView
        android:id="@+id/idOlvide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sv_olvicontra"
        android:textColor="#086DBC"
        app:layout_constraintEnd_toEndOf="@+id/ButtonIngresar"
        app:layout_constraintStart_toStartOf="@+id/ButtonIngresar"
        app:layout_constraintTop_toBottomOf="@+id/ButtonIngresar" />

    <TextView
        android:id="@+id/textViewPt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sv_auncuenta"
        app:layout_constraintEnd_toEndOf="@+id/idOlvide"
        app:layout_constraintStart_toStartOf="@+id/idOlvide"
        app:layout_constraintTop_toBottomOf="@+id/idOlvide" />

    <Button
        android:id="@+id/ButtonIngresar"
        androgiid:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#499FA6"
        android:backgroundTintMode="src_over"
        android:drawableLeft="@drawable/baseline_person_24"
        android:hint="Ingresar"
        android:text="@string/sv_Ingresar"
        android:textColorHint="#E2D2D2"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="306dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="#0A7CCA"
        android:text="@string/sv_consultasal"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ButtonCrear"
        app:layout_constraintStart_toStartOf="@+id/ButtonCrear"
        app:layout_constraintTop_toBottomOf="@+id/ButtonCrear" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="306dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:background="#0A7CCA"
        android:text="@string/sv_provinciasa"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>